--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ services:
   api-expo-go:
     image: mizle/api-expo-go:latest
     container_name: api-expo-go
+    platform: linux/amd64
     ports:
       - 8080:8080
     environment:
