✨ add authentication with JWT

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ MONGO_URL="mongodb://mongo.example.com:27017"
 MONGO_USERNAME="mongouser"
 MONGO_PASSWORD="essa senha é mt dificil de ser quebrada :o"
 MONGO_DB_NAME="expo-go"
+JWT_SECRET="essa senha é mt dificil de ser quebrada :o"
