--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,4 +10,5 @@ services:
       - MONGO_USERNAME=${MONGO_USERNAME}
       - MONGO_PASSWORD=${MONGO_PASSWORD}
       - MONGO_DB_NAME=${MONGO_DB_NAME}
+      - JWT_SECRET=${JWT_SECRET}
     restart: unless-stopped
